Got the program working for the first time. Runs the java process, inputs a static String, and compares output to static String